config/default/memcached-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: memcached-service
spec:
  selector:
    app: memcached
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
