config/default/memcached-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: memcached-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: memcached-ingress
                port:
                  number: 80
